--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,4 +1,16 @@
+<!--API YOUTUBE -->
+<!-- 
+<div class="video-background">
+    <div class="video-foreground">
+      <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+ -->
+
 <p id="notice"><%= notice %></p>
+
+ <div id="vidtop-content">
+<div class="vid-info">
 
 <h1>Emails</h1>
 
@@ -10,6 +22,11 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+    
+   
+  </div>
+
+
 
   <tbody>
     <% @emails.each do |email| %>
@@ -27,3 +44,7 @@
 <br>
 
 <%= link_to 'New Email', new_email_path %>
+
+
+
+
