--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -7,6 +7,13 @@
   </div>
  -->
 
+ <div class="video-background">
+    <div class="video-foreground">
+      <iframe src="https://www.youtube.com/embed/IcrbM1l_BoI?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=IcrbM1l_BoI" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+
+
 <p id="notice"><%= notice %></p>
 
  <div id="vidtop-content">
