--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -9,7 +9,7 @@
 
  <div class="video-background">
     <div class="video-foreground">
-      <iframe src="https://www.youtube.com/embed/IcrbM1l_BoI?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=IcrbM1l_BoI" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/ExvIThM_iPg?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=ExvIThM_iPg" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
